@@ -103,7 +103,7 @@ public class ExpMath {
     }
 
     public static double clamp(double val, double min, double max) {
-        return Math.max(min, Math.min(max, val));
+        return Math.clamp(val, min, max);
     }
 
     // Helpers
